--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -9,7 +9,12 @@ RUN apt-get update && \
 RUN go get github.com/stretchr/testify/require \
     github.com/stretchr/testify/assert \
     github.com/Jeffail/tunny \
-    github.com/thavlik/ribbon/pdb
+    github.com/fogleman/fauxgl \
+    github.com/nfnt/resize \
+    github.com/fogleman/ease
+
+WORKDIR /go/src/github.com/fogleman
+RUN git clone https://github.com/thavlik/ribbon.git
 
 WORKDIR /app
 COPY entrypoint.sh .
